--- a/homeassistant/components/smartenergy_goecharger/manifest.json
+++ b/homeassistant/components/smartenergy_goecharger/manifest.json
@@ -1,8 +1,7 @@
 {
   "domain": "smartenergy_goecharger",
   "name": "go-e Charger Cloud",
-  "documentation": "https://github.com/openkfw/smartenergy.goecharger",
-  "issue_tracker": "https://github.com/openkfw/smartenergy.goecharger/issues",
+  "documentation": "https://www.home-assistant.io/integrations/smartenergy_goecharger",
   "iot_class": "cloud_polling",
   "config_flow": true,
   "dependencies": ["sensor"],
